<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar Pin</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pop_up">Error</string>
    <string name="title_activity_anadir_evento">Añadir Evento</string>

    <!-- Strings ActionBar -->
    <string name="action_settings">Ajustes</string>
    <string name="action_navigation_arrow_back">Atrás</string>
    <string name="action_navigation_arrow_forward">Adelante</string>
    <string name="action_plus">Añadir</string>
    <string name="action_about">About</string>
    <string name="action_help">Ayuda</string>
    <string name="title_activity_dia">DiaActivity</string>
    <string name="title_activity_tareas">TareasActivity</string>
    <string name="action_events">Lista de Tareas</string>

</resources>
